# Mirai-2026

./: .env  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLEANUP_INSTRUCTIONS.md  CMakeLists.txt  CONTRIBUTING.md  HANDOVER.md  IMPLEMENTATION_COMPLETE.md  LICENSE  Makefile.production  README.md  _config.yml  docker-compose.cnc-test.yml  docker-compose.dev.yml  docker-compose.fixed.yml  docker-compose.yml
.github/workflows/: ci.yml
Mirai-Source-Code-master/: .clang-format  .gitignore  AGENTS.md  Makefile  README-2026.md  README.md  docker-compose.sandbox.yml  docker-compose.yml  test_llm_integration.py
Mirai-Source-Code-master/.github/workflows/: ci.yml  pages.yml  security-scan.yml
Mirai-Source-Code-master/ai/: README.md  requirements.txt  test_llm_integration.py
Mirai-Source-Code-master/ai/credential_intel/: generate.py
Mirai-Source-Code-master/ai/federated_learning/: federated_agent.py
Mirai-Source-Code-master/ai/llm_integration/: .env.example  README.md
Mirai-Source-Code-master/ai/ml_evasion/: requirements.txt
Mirai-Source-Code-master/docs/: ARCHITECTURE.md  PROJECT_SUMMARY.md
Mirai-Source-Code-master/docs/api/: API_REFERENCE.md  LLM_INTEGRATION.md
Mirai-Source-Code-master/docs/architecture/: SELF_IMPROVEMENT.md
Mirai-Source-Code-master/docs/deployment/: DOCKER.md
Mirai-Source-Code-master/docs/development/: BUILD_MANIFEST.md  CONTRIBUTING_OLD.md
Mirai-Source-Code-master/docs/guides/: GETTING_STARTED.md  SECURITY.md
Mirai-Source-Code-master/docs/tutorials/: TUTORIAL.md
Mirai-Source-Code-master/k8s/base/: ai-service-deployment.yaml  namespace.yaml  postgres-statefulset.yaml
Mirai-Source-Code-master/observability/grafana/: dashboard_bot_metrics.json
Mirai-Source-Code-master/src/ai_bridge/: CMakeLists.txt
Mirai-Source-Code-master/src/common/: util.h  (+3 more)
Mirai-Source-Code-master/src/scanner/: CMakeLists.txt  scanner_modern.h
ai/: .flake8  analyze_honeypot_logs.py  api_endpoints.py  api_server.py  api_server_enhanced.py  auth_schema.sql  auth_service.py  distributor.py  distributor_k8s.py  loader_manager.py  requirements.txt  requirements_auth.txt  scan_receiver.py  test_llm_integration.py  test_openrouter.py
ai/credential_intel/: generate.py  generate_enhanced.py
ai/deep_learning/: dnn_evasion_model.py  requirements.txt
ai/federated_learning/: federated_agent.py
ai/gossip_protocol/: __init__.py  gossip_coordinator.py  test_gossip.py
ai/llm_integration/: .env  llm_client.py  requirements.txt
ai/ml_evasion/: pattern_generator.py
ai/neural_architecture_search/: __init__.py  nas_optimizer.py  test_nas.py
ai/reinforcement_learning/: adaptive_agent.py
config/: authorization.example.json  bot.example.json  sandbox.json
dashboard/: .env.example  .env.local.example  .gitignore  .vercelignore  README-DEPLOYMENT.md  README.md  jest.config.js  mock-websocket-server.js  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vercel.json
dashboard/tests/: setup.ts
docker/: Dockerfile.ai  Dockerfile.ai-service  Dockerfile.bot  Dockerfile.cnc  Dockerfile.cnc-original  Dockerfile.dashboard
docs/: FORUM_POST_VS_IMPLEMENTATION.md  PROJECT_SUMMARY.md
docs/deployment/: DASHBOARD_DEPLOYMENT.md  DOCKER_BUILD_GUIDE.md  KERNEL_TUNING.md  KUBERNETES.md  QUICK_REFERENCE.md  TERRAFORM.md  verify_deployment.sh
docs/design/: TECH_STACK_ARCHITECTURE.md  UI_UX_DESIGN_SPECIFICATION.md
docs/development/: CNC_MODERNIZATION_PLAN.md  DASHBOARD_IMPLEMENTATION_STATUS.md  DOCUMENTATION_ORGANIZATION.md  EXISTING_SYSTEMS_TEST_REPORT.md  STEALTH_AND_SCALE_IMPLEMENTATION.md
docs/guides/: DASHBOARD_ENHANCEMENTS.md  QUICKSTART.md
docs/research/: BEHAVIORAL_INDICATORS.md  COUNTERMEASURES.md  DETECTION_METHODS.md  ETHICAL_USAGE.md  METHODOLOGY.md  detection_rules.yar  network_detection.rules
docs/tutorials/: TUTORIAL_UPDATES_COMPLETE.md  TUTORIAL_UPDATE_PLAN.md
examples/: credential_loader_example.c
k8s/base/: bot-deployment.yaml  cnc-deployment.yaml  configmap.yaml  kustomization.yaml  mirai-secrets.yaml  monitoring.yaml  networkpolicy.yaml
loader/: multi_ip_loader.c
loader/src/: binary.c  connection.c  main.c  server.c  telnet_info.c
mirai/bot/: attack.c  attack.h  attack_app.c  attack_gre.c  attack_tcp.c  attack_udp.c  killer.c  main.c  scanner.c
mirai/cnc/: admin.go  api.go  bot.go  cnc_modern.go  cnc_optimized.go  database.go  database.py  go.mod  go.sum  init-db.sql  main.go  main.py
mirai/tools/: badbot.c  enc.c  nogdb.c  single_load.c  wget.c
observability/: loki-config.yml  prometheus.yml
observability/grafana/: dashboard_detection_events.json
src/ai_bridge/: ai_bridge.c  ai_bridge.h
src/attack/: CMakeLists.txt  attack_modern.c  attack_modern.h  checksum.c  checksum.h
src/attacks_advanced/: dns_amplification.c  rudy.c  slowloris.c
src/bot/: CMakeLists.txt  main.c
src/common/: audit_log.c  audit_log.h  authorization.c  authorization.h  config_loader.c  config_loader.h  crypto.c  crypto.h  kill_switch.c  kill_switch.h  logger.c  logger.h  metrics.c  metrics.h  pq_crypto.c  pq_crypto.h  random_secure.c  random_secure.h  socket_opts.c  socket_opts.h  util.c  util.h
src/evasion/: CMakeLists.txt  detection_engine.c  detection_engine.h
src/integration/: credential_loader.c  credential_loader.h  pipeline.c  pipeline.h
src/scanner/: CMakeLists.txt  scanner_modern.c  scanner_modern.h  syn_scanner.c  syn_scanner.h  telnet_state_machine.c  telnet_state_machine.h
src/update/: self_update.c  self_update.h
terraform/: main.tf  variables.tf
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  binary_size_check.sh  cnc_bench.go  cnc_benchmark.c  loader_benchmark.c  run_all_benchmarks.sh  scanner_benchmark.c
tests/benchmark/results_20260227_044457/: benchmark_results.md
tests/docker/: test_integration.sh
tests/honeypot/: deploy_cowrie.sh
tests/integration/: test_credential_loader.c  test_distributor.py  test_ethical_safeguards.py  test_full_stack.c
tests/security/: test_vulnerabilities.sh
tests/unit/: test_attack.c  test_config.c  test_logger.c  test_pq_crypto.c  test_scanner.c
(+120 files in other folders)
